--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "abracesp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@fontsource/inter": "^5.1.0",
